src/objects/SFDC_Job_Candidate__c.object
<CustomObject>
    <description>Link Object</description>
    <fields>
        <fullName>SFDC_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>SFDC_Candidate__c</referenceTo>
        <relationshipLabel>Job Candidates</relationshipLabel>
        <relationshipName>R00N30000001WXBxEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Job__c</fullName>
        <label>Job</label>
        <referenceTo>SFDC_Job__c</referenceTo>
        <relationshipLabel>Job Candidates</relationshipLabel>
        <relationshipName>R00N30000001WXBwEAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Candidate</label>
    <nameField>
        <displayFormat>JID{000000}</displayFormat>
        <label>Job Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>